<?xml version="1.0"?>
<package format="2">
  <name>pcd2bag</name>
  <version>1.0.0</version>
  <description>The pcd2bag package</description>

  <maintainer email="zang09@naver.com">haebeom Jung</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>
 
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
